# python-data-analysis-benchmark

./: .gitignore  README.md  pyproject.toml  run-benchmark-macos.sh  run-benchmark-windows.ps1  run-latex-windows.ps1
src/phy_bench/benchmark/: run_benchmarks.py  run_duckdb_benchmarks.py  run_pandas_benchmarks.py  run_polars_benchmarks.py
src/phy_bench/benchmark/default/: benchmark_config.py  default_values.py  invocation_loop.py  print_csv.py  time_cpu_measurement.py
src/phy_bench/benchmark/run/: benchmark_operation.py  benchmark_read.py  engine_config.py
src/phy_bench/benchmark/run_duckdb/: __init__.py  filter_benchmark.py  group_count_benchmark.py  join_benchmark.py  pivot_benchmark.py  read_benchmark.py  sort_benchmark.py
src/phy_bench/benchmark/run_pandas/: __init__.py  filter_benchmark.py  group_count_benchmark.py  join_benchmark.py  pivot_benchmark.py  read_benchmark.py  sort_benchmark.py
src/phy_bench/benchmark/run_polars/: __init__.py  filter_benchmark.py  group_count_benchmark.py  join_benchmark.py  pivot_benchmark.py  read_benchmark.py  sort_benchmark.py
src/phy_bench/data_gen/: airline_gen.py  config.py  flights_gen.py  run_dataset_gen.py  run_generate.py
src/phy_bench/logic/: duckdb_logic.py  pandas_logic.py  polars_logic.py
