[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-data-analysis-benchmark"
version = "0.1.0"
description = "Python benchmark suite for Polars, Pandas, and DuckDB comparisons."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = ["benchmark", "data-analysis", "duckdb", "pandas", "polars"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "duckdb==1.4.1",
  "pandas==3.0.2",
  "polars==1.39.3",
  "psutil==7.2.2",
  "pyarrow==23.0.1",
]

[project.scripts]
generate-datasets = "phy_bench.data_gen.run_dataset_gen:main"
benchmarks = "phy_bench.benchmark.run_benchmarks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["phy_bench*"]
